--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "fastify": "^4.11.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "prisma": "^4.9.0",
+    "prisma-erd-generator": "^1.2.5",
     "typescript": "^4.9.4"
   }
 }
