--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,8 @@
     "prisma": "^4.9.0",
     "prisma-erd-generator": "^1.2.5",
     "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
